projects/nanousd-labs/nanousd/tests/usda/invalid/uint_as_uint64_value.usda
#usda 1.0

def Scope "T"
{
    uint tooLarge = 18446744073709551615
}
